[package]
name = "udemyone_v1_hello_dont_use"
version = "0.1.0"
edition = "2021"
description = "testing upload to crates.io"
keywords = ["do", "not", "use"]
readme = "README.md"
license = "MIT"
documentation = "https://github.com/ozzyozbourne/rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
